within ease added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /****************************************************** */
-/*********************  EnvArch *********************** */
+/*********************  Rajhans *********************** */
 /******************************************************
 
     TABLE OF CONTENT
