--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ a:visited {
 }
 
 a:hover {
-    color: #ca9c6a;
+    color: #800038;
     text-decoration: none;
 }
 
@@ -148,7 +148,7 @@ footer:after {
 }
 
 .section-title h6:first-child {
-    color: #ca9c6a;
+    color: #800038;
 }
 
 .section-title h2 {
@@ -173,7 +173,7 @@ footer:after {
 
 .section-title h2 span,
 .section-title.text-white h2 span {
-    color: #ca9c6a;
+    color: #800038;
 }
 
 /** Button style one */
@@ -186,7 +186,7 @@ a.theme-btn {
     transition: 0.5s;
     min-width: 175px;
     padding: 17px 35px;
-    background: #ca9c6a;
+    background: #800038;
     display: inline-block;
     text-transform: uppercase;
     letter-spacing: 5px;
@@ -247,7 +247,7 @@ a.theme-btn.style-two {
 }
 
 .list-style-one li a:hover {
-    color: #ca9c6a;
+    color: #800038;
 }
 
 .list-style-one li:before {
@@ -312,7 +312,7 @@ a.theme-btn.style-two {
     border-radius: 50%;
     color: white;
     font-size: 18px;
-    background: #ca9c6a;
+    background: #800038;
     border: 1px solid #ffffff33;
     -webkit-animation: pulse 2s infinite;
     animation: pulse 2s infinite;
@@ -395,7 +395,7 @@ input[type="submit"]:focus {
 }
 
 .hero-content .text-lighter {
-    color: #ca9c6a;
+    color: #800038;
     font-weight: 200;
     letter-spacing: 10px;
 }
@@ -514,7 +514,7 @@ input[type="submit"]:focus {
     padding: 17px 66px 16px;
     margin-top: auto;
     margin-left: auto;
-    background: #ca9c6a;
+    background: #800038;
 }
 
 .banner-section nav li {
@@ -553,7 +553,7 @@ input[type="submit"]:focus {
     width: 20px;
     left: 100%;
     top: 0;
-    background: #ca9c6a;
+    background: #800038;
 }
 
 .wp-images img:last-child {
@@ -592,7 +592,7 @@ input[type="submit"]:focus {
 
 .experience-year .number {
     font-size: 80px;
-    color: #ca9c6a;
+    color: #800038;
     font-weight: 700;
     line-height: 65px;
     margin-right: 15px;
@@ -704,7 +704,7 @@ input[type="submit"]:focus {
     width: 100%;
     left: 30px;
     bottom: 35px;
-    background: #ca9c6a;
+    background: #800038;
 }
 
 .video-inner img {
@@ -718,7 +718,7 @@ input[type="submit"]:focus {
     left: 50%;
     top: 50%;
     z-index: 2;
-    color: #ca9c6a;
+    color: #800038;
     font-size: 22px;
     line-height: 76px;
     position: absolute;
@@ -878,8 +878,8 @@ input[type="submit"]:focus {
 
 .apartment-carousel .owl-nav div:hover {
     color: #FFFFFF;
-    background: #ca9c6a;
-    border-color: #ca9c6a;
+    background: #800038;
+    border-color: #800038;
 }
 
 /*apartment tab*/
@@ -903,13 +903,13 @@ input[type="submit"]:focus {
 
 .apartment-tab .nav-link:hover,
 .apartment-tab .nav-link.active {
-    color: #ca9c6a;
+    color: #800038;
     text-decoration: underline;
 }
 
 .apertment-list li {
     display: flex;
-    color: #ca9c6a;
+    color: #800038;
     font-weight: 700;
     margin-bottom: 30px;
     letter-spacing: 3px;
@@ -1043,7 +1043,7 @@ input[type="submit"]:focus {
 }
 
 .success-content h3 {
-    color: #ca9c6a;
+    color: #800038;
     font-weight: 200;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -1058,7 +1058,7 @@ input[type="submit"]:focus {
 
 /*style two*/
 .success-section.style-two {
-    background: #ca9c6a;
+    background: #800038;
 }
 
 .success-section.style-two .count-text,
@@ -1233,7 +1233,7 @@ input[type="submit"]:focus {
 }
 
 .call-action-inner {
-    background: #ca9c6a;
+    background: #800038;
     padding: 70px 100px;
 }
 
@@ -1307,7 +1307,7 @@ input[type="submit"]:focus {
 }
 
 .team-item:hover .team-des h3 {
-    color: #ca9c6a;
+    color: #800038;
 }
 
 /****************************************************** */
@@ -1330,7 +1330,7 @@ input[type="submit"]:focus {
     position: absolute;
     left: 25px;
     bottom: 25px;
-    background: #ca9c6a;
+    background: #800038;
     color: white;
     font-size: 14px;
     font-weight: 500;
@@ -1375,7 +1375,7 @@ input[type="submit"]:focus {
 
 .read-more {
     font-size: 14px;
-    color: #ca9c6a;
+    color: #800038;
     font-weight: 700;
     letter-spacing: 8px;
     text-transform: uppercase;
@@ -1389,7 +1389,7 @@ input[type="submit"]:focus {
 blockquote {
     font-size: 24px;
     font-weight: 600;
-    color: #ca9c6a;
+    color: #800038;
     line-height: 1.45;
     padding: 15px 0 15px 60px;
 }
@@ -1400,7 +1400,7 @@ blockquote {
 }
 
 .blog-share .social-title {
-    color: #ca9c6a;
+    color: #800038;
     font-size: 18px;
     font-weight: 600;
     margin-right: 20px;
@@ -1412,7 +1412,7 @@ blockquote {
 }
 
 .comment-title {
-    color: #ca9c6a;
+    color: #800038;
     margin-bottom: 25px;
 }
 
@@ -1519,7 +1519,7 @@ blockquote {
 }
 
 .contact-widget h6:last-child {
-    color: #ca9c6a;
+    color: #800038;
 }
 
 /*footer bottom*/
@@ -1545,7 +1545,7 @@ blockquote {
 }
 
 .copyright p a {
-    color: #ca9c6a;
+    color: #800038;
 }
 
 
